Updated swagger documentation and added deletion options and shortened share code
